overflow fix

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -51,7 +51,7 @@ a {
 }
 
 body {
-  overflow: hidden;
+  overflow-x: hidden;
 }
 
 h1, h2 {
@@ -204,7 +204,7 @@ svg#logo {
 
 @media (max-width: 768px) {
   svg#logo-text {
-    width: 250px;
+    width: 100px;
   }
 }
 @media (min-width: 769px) {
